    partitioning tool link on the automatic partitioning page.
    GtkBuilder signal mapping appears to be broken (LP: #852054).
  * The first partitioning page does not translate its options ahead of
    time, so ensure that the placeholder text isn't so long as to create
    the installer window to grow excessively large before partitioning
    is reached (LP: #837406).

  [ Stéphane Graber ]
  * Change wallpaper C program to accept a path to a wallpaper as a parameter.
  * Update ubiquity-dm to set the right wallpaper for Edubuntu.
  * Fix ibus in Ubiquity (LP: #838850)

  [ Aurélien Gâteau ]
  * gui/qt/stepKeyboardConf.ui
   - Put keyboard variable combobox on separate line (LP: #851160)

  [ Jonathan Riddell ]
  * kde_ui.py
   - Fix breakage in debfilter crash dialogue

 -- Stéphane Graber <stgraber@ubuntu.com>  Sun, 18 Sep 2011 18:40:07 -0400

ubiquity (2.7.29) oneiric; urgency=low

  * Add power indicator to the installer panel.
  * Handle APs going away while trying to query their properties
    (LP: #838068).
  * Use a small C program to set the desktop wallpaper (LP: #830061).
  * Update translations from Launchpad.
  * Automatic update of included source packages: flash-kernel
    2.28ubuntu31, partman-base 151ubuntu1.

 -- Evan Dandrea <ev@ubuntu.com>  Thu, 15 Sep 2011 10:47:19 +0100

ubiquity (2.7.28) oneiric; urgency=low

  [ Stéphane Graber ]
  * Update stepUserInfo.ui to trigger info_loop() when the hostname is changed.
    (LP: #828181)

  [ Mario Limonciello ]
  * Reorder the imports in oem-config-remove-gtk to fix an import error due
    the fallbacks in aptdaemon. (LP: #837288)
  * Show the wireless page after either prepare or language to make sure
    it shows in both ubiquity and oem-config modes.
  * Call out to find_next_step even on non debconf driven pages. (LP: #843237)
  * Don't assume /target is where the new face is being put.
  * When the installer crashes, file a bug using apport-bug rather than